fix(app): adjust css spacing

--- a/src/app/pages/my-car/my-car.page.scss
+++ b/src/app/pages/my-car/my-car.page.scss
@@ -8,12 +8,12 @@
 .car-card-img {
   height: auto;
   width: 100%;
-  max-width: 15rem;
+  max-width: 10rem;
   margin: 0 auto 0 auto;
 }
 
 .car-title {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   letter-spacing: 4px;
   font-weight: 900;
   text-transform: uppercase;
@@ -28,8 +28,8 @@
 
 .car-divider {
   width: 100%;
-  height: 4.5rem;
-  margin: -1.7rem 1rem;
+  height: 4rem;
+  margin: -2.3rem 1rem;
   border-top: 5px solid var(--ion-color-secondary);
   border-radius: 50%;
   transform: rotate(180deg);
@@ -39,8 +39,8 @@
 .my-car-brand {
   width: auto;
   height: 100%;
-  max-height: 4rem;
-  margin-top: 3rem;
+  max-height: 3rem;
+  margin-top: 1.5rem;
 }
 
 .car-model-name {
@@ -54,11 +54,11 @@
 .car-info-container {
   padding: 1rem;
   background-color: #bebebe21;
-  margin: 2rem;
+  margin: 1rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 0 15px -3px var(--ion-color-secondary);
   & p {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     letter-spacing: 1px;
     font-weight: 500;
     color: var(--ion-color-secondary);
